--- a/src/styles/_character_bio.scss
+++ b/src/styles/_character_bio.scss
@@ -1,3 +1,4 @@
+
 .bio-section {
   background-color:rgb(24, 73, 53);
   color: white;
@@ -7,11 +8,13 @@
 }
 h2.title.has-text-centered{
   color: white;
+  font-family: 'Gloria Hallelujah', cursive;
   margin-top: 24px;
 }
 h4.title.is-4{
     color: white;
-    margin: 5px;
+    margin: 10px 5px 0px 0px;
+    
     
   }
 
@@ -19,7 +22,7 @@ h4.title.is-4{
   display: flex;
   justify-content: center;
   background-color: rgb(9, 52, 17);
-  max-width: 590px;
+  width: 600px;
   border-radius: 10px;
   box-shadow: 5px 5px 5px black;
   .image {
