--- a/src/styles/_character_bio.scss
+++ b/src/styles/_character_bio.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   height: 100vh;
+  font-family: 'Gloria Hallelujah', cursive;
 }
 h2.title.has-text-centered{
   color: white;
@@ -14,10 +15,8 @@ h2.title.has-text-centered{
 h4.title.is-4{
     color: white;
     margin: 10px 5px 0px 0px;
-    
-    
+    font-family: 'Gloria Hallelujah', cursive;
   }
-
 .bio-columns {
   display: flex;
   justify-content: center;
